# adopy_tests

./: .coveragerc  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  __init__.py  pytest.ini  setup.cfg  setup.py
R/: 00_create_paper_figures.R  00_create_paper_tables.R  effect_size_utils.R  npar_posthoc.R  real_00_run_all.R  real_01_import_data.R  real_02_descriptive_analysis.R  real_03_statistical_analysis.R  real_04_convergence_analysis.R  sim_00_run_all.R  sim_01_import_data.R  sim_02_model_comparison.R  sim_03_stimulus_metrics_analysis.R  sim_04_asymmetry_index_evolution.R  sim_05_lat_entropy_analysis.R
analysis/: __init__.py  orchestrator.py
bisection/: BISADOpyWrapper.py  BISAbsADOpyWrapper.py  BISRelADOpyWrapper.py
main/: create_paper_plots.py  export_stimulus_metrics_for_r.py  group_realdata_analysis.py  group_sim_bis_ado_1model_abs.py  group_sim_bis_ado_1model_rel.py  group_sim_bis_ado_2model_rel.py  group_sim_grid_1model_abs.py  group_sim_grid_1model_rel.py  group_sim_grid_2model_rel.py  group_sim_gridrnd_1model_abs.py  group_sim_gridrnd_1model_rel.py  group_sim_gridrnd_2model_rel.py  group_sim_gridrnd_ABS1.py  group_sim_gridrnd_REL1.py  group_sim_gridrnd_REL2.py  group_sim_rnd_1model_abs.py  group_sim_rnd_1model_rel.py  group_sim_rnd_2model_rel.py  progr_analyze_folder.py  regenerate_simulation_data.py  regenerate_simulation_plots.py  subj_console_bis_ado_1model_abs.py  subj_console_bis_ado_1model_rel.py  subj_console_bis_ado_2model_rel.py  subj_console_bis_ado_REL1.py  subj_console_bis_ado_REL2.py  subj_real_bis_ado_1model_abs.py  (+4 more)
(+771 files in other folders)
