[metadata]
name = postprocessing
version = 1.0.0
description = MATLAB to Python postprocessing conversion for temporal bisection data
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scipy>=1.7.0
    statsmodels>=0.13.0
    openpyxl>=3.0.0

[options.extras_require]
test =
    hypothesis>=6.0.0
    pytest>=7.0.0
    pytest-cov>=3.0.0

[bdist_wheel]
universal = 0

[egg_info]
egg_base = build
